# etandex-jcs

./: .gitignore  Makefile  pyproject.toml  xgboost_model.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
src/: inference.py  ploting.py
src/data_cleaning/: controller.py  utils.py
src/models/: xgb_model_0.8232.json  xgb_model_optimist.json  xgb_model_pessimist.json
