[tool.poetry]
name = "etandex-jcs"
version = "0.1.0"
description = ""
authors = ["Clement Wang <clementwang2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^2.17.4"
toml-sort = "^0.23.1"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
