[tool.poetry]
name = "etandex-jcs"
version = "0.1.0"
description = ""
authors = ["Clement Wang <clementwang2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
numpy = "^1.25.1"
plotly = "^5.15.0"
scikit-learn = "^1.3.0"
nbformat = "^5.9.1"
xgboost = "^1.7.6"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^2.17.4"
toml-sort = "^0.23.1"
tqdm = "^4.65.0"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
