[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Clement Wang <clementwang2001@gmail.com>"]
description = ""
name = "etandex-jcs"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
anchor-exp = "^0.0.2.0"
catboost = "^1.2"
lightgbm = "^4.0.0"
lime = "^0.2.0.1"
llvmlite = "^0.40.1"
matplotlib = "^3.7.2"
nbformat = "^5.9.1"
numba = "^0.57.1"
numpy = "^1.24.0"
pandas = "^2.0.3"
plotly = "^5.15.0"
python = "^3.11"
scikit-learn = "^1.3.0"
shap = "^0.42.1"
xgboost = "^1.7.6"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ipykernel = "^6.24.0"
isort = "^5.12.0"
pylint = "^2.17.4"
toml-sort = "^0.23.1"
tqdm = "^4.65.0"
